--- a/scss/home.scss
+++ b/scss/home.scss
@@ -25,13 +25,13 @@ $cons:50px;
     .columnServ {
         background: rgba(0, 0, 0, 0.3019607843);
         h3 {
-            padding: $cons-30 $cons-20;
+            padding: 20px 30px;
         }
         p {
-            padding: $cons-20;
+            padding: 30px;
         }
         li {
-            padding: 0px $cons-20 $cons-20;
+            padding: 0px 30px 30px;
             text-align: end;
         }
     }
