--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,11 @@
+/*Clases placeholder   @extend*/
+.copyRights, .navFooter, .parnert {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  justify-content: space-between;
+}
+
 /*Construccion*/
 footer {
   display: grid;
@@ -8,16 +16,12 @@ footer {
 
 .parnert {
   grid-area: parnert;
-  display: grid;
-  grid-template-columns: auto;
   grid-template-areas: "textParnert logos";
-  grid-template-rows: auto;
   align-items: center;
   -moz-column-gap: 100px;
   column-gap: 100px;
   padding: 40px 50px 40px 50px;
   border-top: grey solid 1px;
-  justify-content: space-between;
 }
 .parnert .logos {
   display: flex;
@@ -28,11 +32,7 @@ footer {
 
 .navFooter {
   grid-area: navFooter;
-  display: grid;
-  grid-template-columns: auto;
   grid-template-areas: "columnMenus columnMenus columnLogo";
-  grid-template-rows: auto;
-  justify-content: space-between;
   padding: 80px 50px 80px 50px;
   border-top: grey solid 1px;
 }
@@ -47,10 +47,6 @@ footer {
 .copyRights {
   grid-area: copyRights;
   background-color: rgba(0, 0, 0, 0.3019607843);
-  display: grid;
-  grid-template-columns: auto;
   grid-template-areas: "footerRedes footerCopy";
-  grid-template-rows: auto;
-  justify-content: space-between;
   padding: 30px;
 }/*# sourceMappingURL=footer.css.map */
