--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -1,8 +1,20 @@
-.mainPortafolio {
+/*Clases placeholder   @extend*/
+.mainPortafolio .cliente, .mainPortafolio {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-areas: "videoPortada videoPortada" "textColunm textColunm1" "cliente cliente" "cliente1 cliente1";
   grid-template-rows: auto;
+}
+
+.mainPortafolio .cliente .clienteItem1 .clienteItem1, .mainPortafolio .cliente .clienteText1 img, .mainPortafolio .cliente .clienteImg img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+/*Construccion*/
+.mainPortafolio {
+  grid-template-areas: "videoPortada videoPortada" "textColunm textColunm1" "cliente cliente" "cliente1 cliente1";
   margin-bottom: 100px;
   grid-gap: 50px;
 }
@@ -19,10 +31,7 @@
 }
 .mainPortafolio .cliente {
   grid-area: cliente;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "clienteText clienteImg" "clienteImg1 clienteText1";
-  grid-template-rows: auto;
   grid-gap: 50px;
   padding: 50px;
 }
@@ -36,13 +45,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
 }
-.mainPortafolio .cliente .clienteImg img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-.mainPortafolio .cliente .clienteItem:nth-child(1) {
+.mainPortafolio .cliente .clienteItem:nth-child(2) {
   grid-row-start: span 2;
 }
 .mainPortafolio .cliente .clienteImg1 {
@@ -56,15 +59,8 @@
   text-align: end;
   margin-top: 150px;
 }
-.mainPortafolio .cliente .clienteText1 img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-.mainPortafolio .cliente .clienteItem1:nth-child(2) {
+.mainPortafolio .cliente .clienteItem1:nth-child(1) {
   grid-row-start: span 2;
-  grid-template-columns: repeat(2, 1fr);
 }
 .mainPortafolio .cliente1 {
   grid-area: cliente1;
