--- a/scss/curriculum.scss
+++ b/scss/curriculum.scss
@@ -36,9 +36,9 @@ $cons:50px;
             grid-area: bannerGaleria ;
             display: grid;
             grid-template-columns: repeat(8, 1fr);
-            grid-gap: $cons/2;
-            grid-auto-rows: $cons*3;
-            margin-top: $cons/2;
+            grid-gap: 20px;
+            grid-auto-rows: 150px;
+            margin-top: 20px ;
             img {
                 height: 100%;
                 @extend %imagen;
