--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*Construccion*/
 * {
   margin: 0px;
   padding: 0px;
@@ -61,24 +62,25 @@ a:hover {
   text-shadow: 0 0 30px rgba(255, 255, 255, 0.5019607843);
 }
 
+/*Mixen*/
 .button1 {
-  background-color: #67d4ff;
   border: #67d4ff 1px solid;
   padding: 10px;
   font-size: 18px;
   cursor: pointer;
   transition: 0.3s ease;
+  background-color: #67d4ff;
 }
 .button1 a {
   padding: 25px 30px 25px 30px;
 }
 .button1:hover {
-  background-color: rgba(103, 212, 255, 0);
   border: #67d4ff 1px solid;
   padding: 10px;
   font-size: 18px;
   cursor: pointer;
   transition: 0.3s ease;
+  background-color: rgba(103, 212, 255, 0);
 }
 
 .button2 {
@@ -87,15 +89,16 @@ a:hover {
   font-size: 18px;
   cursor: pointer;
   transition: 0.3s ease;
+  background-color: rgba(103, 212, 255, 0);
   margin-left: 60px;
 }
 .button2:hover {
-  background-color: #67d4ff;
   border: #67d4ff 1px solid;
   padding: 10px;
   font-size: 18px;
   cursor: pointer;
   transition: 0.3s ease;
+  background-color: #67d4ff;
 }
 .button2 a {
   padding: 25px 30px 25px 30px;
