--- a/scss/constantes.scss
+++ b/scss/constantes.scss
@@ -1,3 +1,4 @@
+/*Construccion*/
 * {
     margin: 0px;
     padding: 0px;
@@ -50,39 +51,29 @@ a {
         text-shadow: 0 0 30px rgba(255, 255, 255, 0.5019607843);
     }
 }
-.button1 {
-    background-color: #67d4ff;
+/*Mixen*/
+@mixin propieti ($fondo){
     border: #67d4ff 1px solid;
     padding: 10px;
     font-size: 18px;
     cursor: pointer;
     transition: 0.3s ease;
-        a {
+    background-color: $fondo;
+}
+.button1 {
+    @include propieti(#67d4ff);
+        a{
             padding: 25px 30px 25px 30px;
         }
         &:hover {
-            background-color: rgba(103, 212, 255, 0);
-            border: #67d4ff 1px solid;
-            padding: 10px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: 0.3s ease;
+            @include propieti(rgba(103, 212, 255, 0));
         }
 }
 .button2 {
-    border: #67d4ff 1px solid;
-    padding: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: 0.3s ease;
+    @include propieti(rgba(103, 212, 255, 0));
     margin-left: 60px;
     &:hover {
-        background-color: #67d4ff;
-        border: #67d4ff 1px solid;
-        padding: 10px;
-        font-size: 18px;
-        cursor: pointer;
-        transition: 0.3s ease;
+        @include propieti(#67d4ff);
     }
     a {
         padding: 25px 30px 25px 30px;
