--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ header {
   margin-top: 20px;
 }
 .mainCurriculum .tecnologias .bannerGaleria img {
-  height: 100%;
+  height: auto;
 }
 .mainCurriculum .expericiaProyec {
   grid-area: expericiaProyec;
@@ -570,6 +570,10 @@ footer {
   .mainCurriculum p {
     font-size: 13px;
   }
+  .mainCurriculum .tecnologias .bannerGaleria {
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: auto;
+  }
 }
 @media screen and (max-width: 910px) {
   .topRedes {
@@ -601,23 +605,23 @@ footer {
     margin-top: 0px;
     margin-bottom: 0px;
   }
-  .contact {
+  .mainContacto .contact {
     grid-template-columns: 1fr;
     grid-template-areas: "formContact" "maps";
     grid-template-rows: auto;
     margin: 50px 0 50px 0;
   }
-  .maps {
+  .mainContacto .maps {
     height: 400px;
     margin-bottom: 20px;
   }
   .mainCurriculum {
     grid-gap: 40px;
   }
-  .mainPortafolio {
+  .mainCurriculum .mainPortafolio {
     margin-bottom: 40px;
   }
-  .datosPhoto img {
+  .mainCurriculum .datosPhoto img {
     padding-left: 0;
   }
 }
@@ -715,6 +719,12 @@ footer {
     color: #E2E2E2;
     margin-bottom: 50px;
     margin-top: 50px;
+  }
+  .mainCurriculum .datosPhoto img {
+    padding-left: 0;
+  }
+  .mainCurriculum .tecnologias .bannerGaleria {
+    grid-gap: 10px;
   }
 }
 @media screen and (max-width: 660px) {
