--- a/scss/curriculum.scss
+++ b/scss/curriculum.scss
@@ -40,7 +40,7 @@ $cons:50px;
             grid-auto-rows: 150px;
             margin-top: 20px ;
             img {
-                height: 100%;
+                height: auto;
                 @extend %imagen;
             }
         }
