--- a/css/style.css
+++ b/css/style.css
@@ -624,6 +624,23 @@ footer {
   .mainCurriculum .datosPhoto img {
     padding-left: 0;
   }
+  .mainPortafolio {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "videoPortada" "textColunm" "textColunm1" "cliente" "cliente1";
+  }
+  .mainPortafolio .textColunm {
+    margin-left: 0px;
+    padding: 0 5%;
+  }
+  .mainPortafolio .textColunm1 {
+    margin-right: 0px;
+    padding: 0 5%;
+  }
+  .mainPortafolio .cliente {
+    grid-template-columns: 1fr;
+    grid-template-areas: "clienteText" "clienteImg" "clienteText1" "clienteImg1";
+  }
 }
 @media screen and (max-width: 740px) {
   .videoPortada {
