--- a/css/style.css
+++ b/css/style.css
@@ -640,6 +640,14 @@ footer {
   .mainPortafolio .cliente {
     grid-template-columns: 1fr;
     grid-template-areas: "clienteText" "clienteImg" "clienteText1" "clienteImg1";
+    padding: 0px 5%;
+    gap: 20px;
+  }
+  .mainPortafolio .cliente .clienteText {
+    margin-top: 0px;
+  }
+  .mainPortafolio .cliente .clienteText1 {
+    margin-top: 30px;
   }
 }
 @media screen and (max-width: 740px) {
