--- a/scss/style.scss
+++ b/scss/style.scss
@@ -172,6 +172,14 @@ footer {grid-area: footer;}
             "clienteImg"
             "clienteText1"
             "clienteImg1";
+            padding: 0px 5%;
+            gap: 20px;
+            .clienteText{
+                margin-top: 0px;
+            }
+            .clienteText1{
+                margin-top: 30px;
+            }
         }
     }
 }
