--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,6 +37,7 @@ footer {grid-area: footer;}
     }
     .servicios{
         column-gap: 30px;
+        padding: 5%;
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
         "columnServTitle columnServTitle"
@@ -46,25 +47,28 @@ footer {grid-area: footer;}
     .parnert {
         column-gap: 30px;
     }
-    .servics{
-        grid-template-columns: 1fr;
-        grid-area: 
-        "servicsTextI"
-        "servicsImg"
-        "servicsTextI1"
-        "servicsImg";
-        grid-template-rows: auto auto auto auto;
-    }
-    .servicsTextI{
-        margin-right: 50px;
-        margin-top: 0;
-        margin-bottom: 40px;
-    }
-    .datosPhoto img{
-        padding-left: 10%;
-    }
-    .datosPhoto img{
-        padding-left: 10%;
+    .mainServicio{
+        padding: 5%;
+        .servics{
+            grid-template-columns: 1fr;
+            grid-area: 
+            "servicsTextI"
+            "servicsImg"
+            "servicsTextI1"
+            "servicsImg";
+            grid-template-rows: auto auto auto auto;
+            .servicsTextI{
+                margin-right: 50px;
+                margin-top: 0;
+                margin-bottom: 40px;
+            }
+            .datosPhoto img{
+                padding-left: 10%;
+            }
+            .datosPhoto img{
+                padding-left: 10%;
+            }
+        }
     }
 }
 
@@ -91,6 +95,7 @@ footer {grid-area: footer;}
         font-size: 13px;
     }
     .mainCurriculum {
+        padding: 5%;
         .tecnologias {
             .bannerGaleria {
                 grid-template-columns: repeat(4, 1fr);
@@ -129,6 +134,7 @@ footer {grid-area: footer;}
         max-width: 160px;
     }
     .mainContacto{
+        padding: 5%;
         margin-top: 0px;
         margin-bottom: 0px;
         .contact{
@@ -152,6 +158,9 @@ footer {grid-area: footer;}
         .datosPhoto img{
             padding-left: 0;
         }
+    }
+    .mainServicio .servics .servicsImg{
+        grid-auto-rows: 200px;
     }
     .mainPortafolio {
         grid-template-columns: 1fr;
@@ -189,7 +198,7 @@ footer {grid-area: footer;}
 
 @media screen and (max-width: 740px){
     .videoPortada{
-        padding: 100px 50px 100px;;
+        padding: 100px 5%;
     }
     .columnLogo{display: none;}
     .menuFooter{display: none;}
@@ -221,26 +230,27 @@ footer {grid-area: footer;}
     .mainServicio{
         margin-top: 40px;
         margin-bottom: 40px;
-    }
-    .servics .servicsImg{
-        display: grid;
-        grid-template-columns: 1fr  1fr;
-        grid-gap: 10px;
-    }
-    .galeriaItem h5{
-        font-size: 10px;
-    }
-    .galeriaItem:nth-child(1){
-        grid-row-start: span 2;
-    }
-    .galeriaItem:nth-child(4) {
-        grid-column-start: span 1;
-    }
-    .galeriaItem:nth-child(5){
-        grid-row-start: span 2;
-    }
-    .galeriaItem:nth-child(8) {
-        grid-column-start: span 2;
+        .servics .servicsImg{
+            grid-auto-rows: 120px;
+            display: grid;
+            grid-template-columns: 1fr  1fr;
+            grid-gap: 10px;
+            .galeriaItem h5{
+                font-size: 10px;
+            }
+            .galeriaItem:nth-child(1){
+                grid-row-start: span 2;
+            }
+            .galeriaItem:nth-child(4) {
+                grid-column-start: span 1;
+            }
+            .galeriaItem:nth-child(5){
+                grid-row-start: span 2;
+            }
+            .galeriaItem:nth-child(8) {
+                grid-column-start: span 2;
+            }
+        }
     }
     .mainPortafolio{
         grid-template-columns: 1fr;
@@ -269,7 +279,6 @@ footer {grid-area: footer;}
         "tecnologias"
         "expericiaProyec"
         "expericiaProyec1";
-        padding: 50px;
         color: #E2E2E2;
         margin-bottom: 50px;
         margin-top: 50px;
