--- a/scss/home.scss
+++ b/scss/home.scss
@@ -35,4 +35,12 @@ $cons:50px;
             text-align: end;
         }
     }
+    .columnServTitle{
+        .columnText{
+            h2{
+                text-align: end;
+                margin-bottom: 20px;
+            }
+        }
+    }
 }
