--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,10 @@ header {
   padding: 0px 30px 30px;
   text-align: end;
 }
+.servicios .columnServTitle .columnText h2 {
+  text-align: end;
+  margin-bottom: 20px;
+}
 
 /*Clases placeholder*/
 .mainServicio .servics, .mainServicio {
